# A-mem

./: .gitignore  AGENTS.md  README.md  ablation.py  llm_text_parsers.py  memory_layer.py  memory_layer_robust.py  memory_pipeline.py  package-lock.json  pyproject.toml  requirements.txt  run_ablation_core7_k5.sh  test_ablation.py  test_advanced.py  test_advanced_robust.py  test_keyword_artifact_analysis.py  test_llm_text_parsers.py  test_memory_pipeline.py  test_parallel_evaluation.py  test_reproduction_package.py
configs/: amem_fake_smoke.yaml  amem_llama32_llamacpp_full.yaml  financebench_llamacpp.yaml  financebench_llamacpp_smoke.yaml  robust_bm25_embedding_reranker.yaml  turn_rag_smoke.yaml
docs/: architecture.md  baseline_comparison_zh.md  benchmark_component_usage.md  memorybench_architecture.md  retrieval_reranker_design_zh.md
scripts/: analyze_keyword_artifacts.py  build_memories.py  evaluate_memories.py  experiment_common.py  experiment_config.py  experiment_dashboard.py  experiment_data_loader.py  k_sweep_ollama.sh  print_k_results.py  run_content_keyword_pruning_experiment.py  run_content_keyword_rebuild_experiment.py  run_experiment.py  run_experiment.sh  visualize_keyword_graph.py  visualize_keyword_pruning_comparison.py  visualize_memories.py
tests/: test_ablation.py  test_amem_serialization.py  test_benchmark_artifacts.py  test_benchmark_config.py  test_benchmark_hooks.py  test_benchmark_results.py  test_benchmark_schemas.py  test_experiment_common.py  test_experiment_config.py  test_experiment_data_loader.py  test_experiment_entrypoints.py  test_reranking.py  (+15 more)
(+53 files in other folders)
